# Financial_Anomaly_Env_for_AI_Agents

./: .gitignore  Dockerfile  README.md  SETUP_GUIDE.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
server/: app.py
src/: __init__.py  anomaly_injector.py  environment.py  generator.py  grader.py  models.py  utils.py
tasks/: task_easy.json  task_hard.json  task_medium.json
tests/: test_env.py
